# unplanned_detection

./: .gitignore  README.md  init_mysql_schema.sql  langgraph.json  pyproject.toml  vision_agent.py
backend/: agent.py  app.py  db.py  llm.py  matching_agent.py  model_api.py  ocr.py  pdf_ticket.py  prompt_settings.py  sample_data.py  smith_graphs.py  vision_service.py
backend/docs/: development_progress_2026-06-05.md  platform_api_and_vision_agent_development.md  unplanned_violation_detection_guidance.md  unplanned_violation_rules.json
backend/integrations/: __init__.py  camera_client.py  ticket_client.py  vision_client.py
backend/tools/: __init__.py  import_ticket_folder.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: AppHeader.tsx  AppSider.tsx
frontend/src/pages/: DashboardPage.tsx  DocxPage.tsx  InteractionPage.tsx  PilotWorkflowPage.tsx  SettingsPage.tsx  TicketListPage.tsx  TicketParserPage.tsx  ViolationDetectionPage.tsx  VisionUnderstandingPage.tsx  WorkInspectionPage.tsx
frontend/src/router/: index.tsx
frontend/src/types/: index.ts
