[project]
name = "unplanned-work-inspection"
version = "0.1.0"
description = "Unplanned work intelligent inspection platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.9",
    "pymysql>=1.1.0",
    "langgraph>=1.0.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
